# ai-video-creator

./: .gitignore  README.md  SCREENSHOT_FEATURE.md  SETUP.md  TTS_IMPROVEMENTS.md  WEB_INTERFACE_GUIDE.md  ai.ts  audio.ts  demo.txt  download.ts  index.ts  main.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  setup-oauth.sh  start-web.sh  test-oauth.js  test-screenshot.js  transcribe.ts  tts.py  utils.ts  video.ts
.github/workflows/: cleanup.yml  generate-video.yml  tts.yml  youtube-upload.yml
client/: README.md  package.json  tailwind.config.js
client/src/: app.css  types.ts
client/src/routes/: +layout.svelte  +page.svelte
server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
server/src/: auth-manager.ts  providers.ts  server.ts  types.ts  websocket-manager.ts
src/: ai.ts  audio.ts  constants.ts  convert.sh  index.ts  oauth-client.ts  screenshot.ts  transcribe.ts  types.ts  utils.ts  video.ts
src/scrapers/: index.ts
src/sources/: movie.ts  ranking.ts  reddit.ts
src/uploaders/: facebook-oauth.ts  facebook.ts  filesystem.ts  index.ts  snapchat-oauth.ts  tiktok-oauth.ts  tiktok.ts  youtube-oauth.ts  youtube.ts
tests/: audio.ts  comine.ts  movie.ts  reddit.ts
ui/: tailwind.config.js
ui/src/: app.css  variables.css
uploader/: index.ts
utils/: audio.py  download.py  main.py  story.py  token  transcribe.py  upload.py  upload_video.py
utils/adventure/: book-spec  book-spec-draft
utils/isekai/: book-spec  book-spec-draft
utils/story_telling_agent/: storytelling_agent.py
(+89 files in other folders)
