[project]
name = "video-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apiclient>=1.0.4",
    "click>=8.1.8",
    "en-core-web-sm",
    "faster-whisper>=1.1.1",
    "google-api-python-client>=2.169.0",
    "kokoro>=0.9.4",
    "moviepy>=2.1.2",
    "oauth2client>=4.1.3",
    "playwright>=1.51.0",
    "pytube>=15.0.0",
    "pytubefix>=8.12.3",
    "soundfile>=0.13.1",
    "yt-dlp>=2025.3.31",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
